# vite-js-fastapi-webapp

./: .gitignore  GEMINI.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 1bf6a66cde0d_make_logged_at_timezone_aware.py  9e6d47843931_add_logger_categories_and_entries_with_.py  d3d6056f0834_change_category_id_to_integer_in_logger_.py
backend/app/: cli.py  logging_config.py  main.py  mcp_server.py
backend/app/api/v1/: routers.py
backend/app/api/v1/endpoints/: logger_categories.py  logger_entries.py
backend/app/crud/: crud_logger_category.py  crud_logger_entry.py
backend/app/db/schemas/: logger_category.py  logger_entry.py
backend/app/models/: __init__.py  logger_category.py  logger_entry.py
frontend/src/components/: Navbar.js
frontend/src/pages/: index.js  logger.js  todo.js  vision-board.js
frontend/src/pages/api/logger_categories/: [logger_category_id].js  index.js
frontend/src/pages/api/logger_entries/: [logger_entry_id].js  index.js
mcp/: Dockerfile  mcp-settings.txt
mcp/app/: server.py
